force-app/main/default/objects/AccountPlanDetail__c/AccountPlanDetail__c.object-meta.xml
<CustomObject>
    <label>Account Plan Detail</label>
    <nameField>
        <displayFormat>APD{000000}</displayFormat>
        <label>Account Plan Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>