force-app/main/default/objects/AccountPlanDetail__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <label>Account Plan</label>
    <referenceTo>AccountPlan__c</referenceTo>
    <relationshipLabel>Account Plan Details</relationshipLabel>
    <relationshipName>Account_Plan_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>