force-app/main/default/objects/AccountPlanDetail__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Plan Details</relationshipLabel>
    <relationshipName>Account_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>