force-app/main/default/objects/AccountPlanDetail__c/fields/Customer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Profile</label>
    <referenceTo>CustomerProfile__c</referenceTo>
    <relationshipLabel>Account Plan Details</relationshipLabel>
    <relationshipName>Account_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>