force-app/main/default/objects/AccountPlanDetail__c/fields/Detail_Record__c.field-meta.xml
<CustomField>
    <fullName>Detail_Record__c</fullName>
    <formula>IF(
NOT(ISBlank(Project__c)),
HYPERLINK(&quot;/&quot;&amp;Project__r.Id, Project__r.Name),
IF(NOT(ISBlank(Strategic_Objective__c)),
HYPERLINK(&quot;/&quot;&amp; Strategic_Objective__r.Id, Strategic_Objective__r.Name),
IF(NOT(ISBlank(Opportunity__c)),
HYPERLINK(&quot;/&quot;&amp; Opportunity__r.Id, Opportunity__r.Id)
,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detail Record</label>
    <type>Text</type>
</CustomField>