force-app/main/default/objects/AccountPlanDetail__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Account Plan Details</relationshipLabel>
    <relationshipName>Account_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>