force-app/main/default/objects/AccountPlanDetail__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Account Plan Details</relationshipLabel>
    <relationshipName>Account_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>