force-app/main/default/objects/AccountPlanDetail__c/fields/Strategic_Objective__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategic Objective</label>
    <referenceTo>StrategicObjective__c</referenceTo>
    <relationshipLabel>Account Plan Details</relationshipLabel>
    <relationshipName>Account_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>