force-app/main/default/objects/AccountPlanDetail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF( Opportunity__c !=&#39;&#39;, &#39;Opportunity&#39;, IF( Contact__c !=&#39;&#39;, &#39;Contact&#39;, IF( Project__c !=&#39;&#39;, &#39;Project&#39;, &#39;Stragetic Objective&#39;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>